fixed p colour and size, added the case studies filler and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,13 @@ html {
   font-family: "Open Sans", sans-serif;
 }
 
+p{
+  font-weight: 300;
+  color: #333333;
+}
+
 h1 {
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-weight: 300;
   color: #59bf8e;
   font-size: 1.6rem;
